--- a/_layouts/alternatives.html
+++ b/_layouts/alternatives.html
@@ -2,19 +2,19 @@
 layout: content
 ---
 <article>
-    {% include partial/alert.html
+    {%- include partial/alert.html
         style='info'
         title='caveat'
         desc='Please keep in mind that this is the view of one or more devs of InvenTree. So there is an elemenet of bias involved.'
-    %}
+    -%}
     {{ content }}
 
-    {% if page.oss %}
-    {% include partial/alert.html
+    {%- if page.oss -%}
+    {%- include partial/alert.html
         style='info'
         title='(F)OSS'
         desc="This alternative is (F)OSS - let's celebrate this by heading over, giving it a good look and staring the project! Motiviation keeps projects and maintainers going."
-    %}
-    {% endif %}
-    View other <a href="{% link alternatives/index.md %}">Alternatives</a>.
+    -%}
+    {%- endif -%}
+    View other <a href="{%- link alternatives/index.md -%}">Alternatives</a>.
 </article>
