--- a/_includes/partial/publisher_link.html
+++ b/_includes/partial/publisher_link.html
@@ -1,3 +1,3 @@
-{% assign pub_small = include.pub | downcase %}
-{% assign publisher_ref = site.publishers | where: 'short_name', pub_small | first %}
+{%- assign pub_small = include.pub | downcase -%}
+{%- assign publisher_ref = site.publishers | where: 'short_name', pub_small | first -%}
 <a href="{{ publisher_ref.url | relative_url }}">{{ publisher_ref.name }}</a>
