--- a/_layouts/collection/collection_base.html
+++ b/_layouts/collection/collection_base.html
@@ -3,19 +3,19 @@ layout: default
 ---
 
 <header>
-    {% if page.backLink or page.backLink == nil %}
+    {%- if page.backLink or page.backLink == nil -%}
     <a href="{{ layout.base_link | relative_url }}" class="flex items-center m-5 text-xl hover:underline">
         <img class="w-6 h-6" alt="go back" src="{{ '/assets/back.svg' | relative_url }}" />
         <span>Back</span>
     </a>
-    {% endif %}
+    {%- endif -%}
 </header>
 
 <article>
     <h1>{{ page.title }}</h1>
     <p>
       {{ page.date | date_to_string }}
-      {% include partial/publisher_link.html pub= page.author %}
+      {%- include partial/publisher_link.html pub= page.author -%}
     </p>
     {{ content }}
 </article>
