--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,18 +2,18 @@
 <html lang="{{ site.lang | default: " en-US " }}">
 
 <head>
-    {% include base/head.html %}
+    {%- include base/head.html -%}
     <script async defer src="https://{{site.analytics-domain}}" data-website-id="{{site.analytics-id}}" data-do-not-track="true"></script>
 </head>
 
 <body class="flex flex-col antialiased cm-gray-1 min-h-screen">
     <div class="flex-none">
-        {% include base/header.html %} {{ content }}
+        {%- include base/header.html -%} {{ content }}
     </div>
 
     <div class="flex-grow"></div>
     <div class="flex-none">
-        {% include base/footer.html %}
+        {%- include base/footer.html -%}
     </div>
 </body>
 
