--- a/_layouts/plugin_highlight.html
+++ b/_layouts/plugin_highlight.html
@@ -3,9 +3,9 @@ layout: content
 ---
 <article>
     {{ content }}
-    {% if page.plugin %}
+    {%- if page.plugin -%}
     <hr>
     <p>Find out more about this plugin on the plugin site</p>
-    {% include plugin_card.html plugin=page.plugin %}
-    {% endif %}
+    {%- include plugin_card.html plugin=page.plugin -%}
+    {%- endif -%}
 </article>
