--- a/_layouts/publisher.html
+++ b/_layouts/publisher.html
@@ -4,54 +4,54 @@ notitle: true
 ---
 <h2>
   <div class="flex items-end">
-    {% if page.github %}
+    {%- if page.github -%}
     <div class="mb-1">
       <img src="https://github.com/{{ page.github }}.png?size=40" alt="mdo" class="rounded-full" width="40" height="40" style="margin:0px">
     </div>
-    {% endif %}
+    {%- endif -%}
     {{ page.name }}
   </div>
 </h2>
 
 <div>
-{% if page.github %}
+{%- if page.github -%}
 <a href="https://github.com/{{page.github}}"><span class="badge bg-secondary">GitHub</span></a>
-{% endif %}
+{%- endif -%}
 
-{% if page.website %}
+{%- if page.website -%}
 <a href="{{page.website}}"><span class="badge bg-secondary">Website</span></a>
-{% endif %}
+{%- endif -%}
 
-{% assign filtered_team = site.data.team.team | where: 'tag', page.short_name %}
-{% if filtered_team and filtered_team.size != 0  %}
-<a href="{% link about/team.html %}"><span class="badge bg-lime-600"><span class="fa-solid fa-shield"></span>Team Member</span></a>
-{% endif %}
+{%- assign filtered_team = site.data.team.team | where: 'tag', page.short_name -%}
+{%- if filtered_team and filtered_team.size != 0  -%}
+<a href="{%- link about/team.html -%}"><span class="badge bg-lime-600"><span class="fa-solid fa-shield"></span>Team Member</span></a>
+{%- endif -%}
 </div>
 
 <blockquote class="blockquote">
   {{ content }}
 </blockquote>
 
-{% assign filtered_posts = site.posts | where: 'author', page.short_name %}
-{% if filtered_posts and filtered_posts.size != 0 %}
+{%- assign filtered_posts = site.posts | where: 'author', page.short_name -%}
+{%- if filtered_posts and filtered_posts.size != 0 -%}
 <h3>Posts</h3>
 <ul class="list-unstyled">
-  {% for post in filtered_posts %}
+  {%- for post in filtered_posts -%}
     <li>{{ post.date | date_to_string }} <a href="{{ post.url | relative_url }}" class="lead">{{ post.title }}</a></li>
-  {% endfor %}
+  {%- endfor -%}
 </ul>
-{% endif %}
+{%- endif -%}
 
-{% assign filtered_plugins = site.repo | where: 'author', page.short_name %}
-{% if filtered_plugins and filtered_plugins.size != 0 %}
+{%- assign filtered_plugins = site.repo | where: 'author', page.short_name -%}
+{%- if filtered_plugins and filtered_plugins.size != 0 -%}
 <h3>Plugins</h3>
 <ul class="list-unstyled">
-  {% for plugin in filtered_plugins %}
+  {%- for plugin in filtered_plugins -%}
     <li>
       <a href="{{ plugin.url | relative_url }}">
       {{ plugin.title }}
       </a>
     </li>
-  {% endfor %}
+  {%- endfor -%}
 </ul>
-{% endif %}
+{%- endif -%}
