--- a/_layouts/plugin.html
+++ b/_layouts/plugin.html
@@ -4,7 +4,7 @@ notitle: true
 fullwith: true
 ---
 <h2>{{ page.name }}
-<span class="sm:ml-2 text-sm">{% include partial/publisher_ref.html pub=page.publisher %}</span>
+<span class="sm:ml-2 text-sm">{% include partial/publisher_ref.html pub=page.author %}</span>
 </h2>
 
 <div class="md:flex md:flex-row flex-wrap">
