--- a/_layouts/plugin.html
+++ b/_layouts/plugin.html
@@ -16,11 +16,12 @@ fullwith: true
       <h2 class="block sm:hidden">Link section</h2>
       <div>
 
+        <a href="{{ page.github }}" class="no-underline" aria-label="open github repo">
         <div>
           <h4 class="fst-italic">Github</h4>
           <p>{{ page.github | remove: "https://github.com/" }}</p>
-          <a href="{{ page.github }}" class="stretched-link" aria-label="open github repo"></a>
         </div>
+        </a>
 
         <div>
           <h4 class="fst-italic">Categories</h4>
@@ -40,11 +41,12 @@ fullwith: true
           </ol>
         </div>
 
+        <a href="{{ page.website }}" class="no-underline" aria-label="open website">
         <div>
           <h4 class="fst-italic">Website</h4>
           <p>{{ page.website }}</p>
-          <a href="{{ page.website }}" class="stretched-link" aria-label="open website"></a>
         </div>
+        </a>
 
       </div>
     </div>
