--- a/_layouts/plugin.html
+++ b/_layouts/plugin.html
@@ -7,8 +7,8 @@ fullwith: true
 <span class="sm:ml-2 text-sm">{% include partial/publisher_ref.html pub=page.author %}</span>
 </h2>
 
-<div class="md:flex md:flex-row flex-wrap">
-    <div class="w-full md:w-3/4">
+<div class="flex-wrap md:flex md:flex-nowrap">
+    <div class="w-full md:w-auto md:mr-4">
         {{ content }}
     </div>
 
