--- a/_layouts/plugin.html
+++ b/_layouts/plugin.html
@@ -4,7 +4,8 @@ notitle: true
 fullwith: true
 ---
 <h2>{{ page.name }}
-<span class="sm:ml-2 text-sm">{% include partial/publisher_ref.html pub=page.author %}</span>
+<span class="sm:ml-2 text-sm">{% include partial/publisher_ref.html pub=page.author %}</span> 
+<span class="sm:ml-2 text-sm">last modified: {{ page.last-modified-date | date_to_string }}</span>
 </h2>
 
 <div class="flex-wrap md:flex md:flex-nowrap">
