--- a/_layouts/plugin.html
+++ b/_layouts/plugin.html
@@ -69,20 +69,20 @@ fullwith: true
 
         <div>
           <h4 class="plugin_links">Categories</h4>
-          <ul class="list-unstyled font-normal">
+          <div>
             {% for categorie in page.categories %}
-            <li><a href="/categories/#{{ categorie | slugify }}"><span class="badge bg-yellow-500">{{ categorie }}</span></a></li>
+            <a href="/categories/#{{ categorie | slugify }}"><span class="badge bg-yellow-500 whitespace-nowrap">{{ categorie }}</span></a>
             {% endfor %}
-          </ul>
+          </div>
         </div>
 
         <div>
           <h4 class="plugin_links">Tags</h4>
-          <ul class="list-unstyled font-normal">
+          <div>
             {% for tag in page.tags %}
-            <li><a href="/tags/#{{ tag | slugify }}"><span class="badge bg-blue-400">{{ tag }}</span></a></li>
+            <a href="/tags/#{{ tag | slugify }}"><span class="badge bg-blue-400 whitespace-nowrap">{{ tag }}</span></a>
             {% endfor %}
-          </ul>
+          </div>
         </div>
       </div>
     </div>
