--- a/_includes/block/plugins.html
+++ b/_includes/block/plugins.html
@@ -1,7 +1,7 @@
 <section class="cm-gray-2 body-font">
     <div class="section-container">
         <div class="flex flex-col text-center w-full mb-5">
-            <h1 class="text-2xl font-medium title-font mb-4 cm-gray-1 tracking-widest">Plugin Repository</h1>
+            <h1 class="text-2xl font-medium title-font mb-4 cm-gray-1 tracking-widest">Plugin List</h1>
             <p>
                 Explore plugins provided by the community.
                 <a class="text-secondary inline-flex items-center" href="{% link 'plugins.html' %}" alt="learn more">Learn More <img class="w-4 h-4 ml-2" alt="Arrow pointing right" src="{{ '/assets/learn.svg' | relative_url }}" /></a>
