add spacing to plugins tags

--- a/_includes/plugin_card.html
+++ b/_includes/plugin_card.html
@@ -1,7 +1,7 @@
 <a href="{{ plugin.url | relative_url }}" class="no-underline" aria-label="open plugin details">
   <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
     <div class="col p-4 d-flex flex-column position-static">
-      <div class="d-inline-block">
+      <div class="d-inline-block leading-loose">
         {% for cat in plugin.categories %}
         <span class="plugin_cat">{{ cat }}</span>
         {% endfor %}
