--- a/_layouts/collection/collection_refpage.html
+++ b/_layouts/collection/collection_refpage.html
@@ -1,6 +1,10 @@
 ---
-layout: content
+layout: default
 ---
+
+<div class="pt-3 pb-1 section-container">
+  <h1 class="header-text title-font mb-4 cm-gray-1">{{page.title}}</h1>
+  <span class="content">
 
 {% assign all_items = "" | split: "/" %}
 {% for col_item in site[page.collection] %}
@@ -23,6 +27,7 @@ layout: content
     </a>
   {% endunless %}
 {% endfor %}
+  </span>
 
 {% for item in all_items %}
     {% unless item == "" %}
@@ -43,3 +48,5 @@ layout: content
     </div>
     {% endunless %}
 {% endfor %}
+
+</div></div>
