switch a tags to div

--- a/_includes/block/features.html
+++ b/_includes/block/features.html
@@ -2,7 +2,7 @@
     <div class="section-container">
       <div class="flex flex-wrap w-full mb-4">
         <div class="lg:w-1/2 w-full mb-6 lg:mb-0">
-          <a class="anchor" id="{{ include.data.ref }}"></a>
+          <div class="anchor" id="{{ include.data.ref }}"></div>
           <div class="inline-flex items-center">
             <h1 class="header-text title-font mb-2 cm-gray-1">{{ include.data.title }}</h1>
             {% if include.link %}
