--- a/_includes/block/plugins.html
+++ b/_includes/block/plugins.html
@@ -8,7 +8,7 @@
             </p>
         </div>
         <div class="flex flex-wrap -m-4">
-            {% assign filtered_repo = site.repo | sort: 'last-modified-date' %}
+            {% assign filtered_repo = site.repo | sort: 'last-modified-date' | reverse %}
             {% for plugin in filtered_repo limit:2 %}
             <div class="space-4 p-2 md:w-1/2">
                 {% include plugin_card.html plugin=plugin %}
